# roblox-fps-unlocker

./: Cargo.toml  LICENSE  README.md  normal.json
src/: main.rs
src/configs/: low.json
ui/: appwindow.slint
