[package]
name = "roblox-fps-unlocker"
version = "0.1.1"
authors = ["HSp4m <sp4m787@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
whoami = "1.5.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[build-dependencies]
slint-build = "1.6"
